test/invalidImports/service.interface.ts
import { ClassX } from "./service";
export interface IA {}

export class ClassB {
  public errorCode: string;
}

export const a = new ClassX();
